JastAddExtensions/NonNullChecker/test/Test07.result
Errors:
test/Test07.java:20:
  Semantic Error: only instance methods may be raw this
